# NetPipe-python

./: PROTOCOL.md  README.md  pyproject.toml
examples/: chat.py
netpipe/: __init__.py  client.py  crypto.py  protocol.py  stream.py
tests/: test_compat.py  test_netpipe.py
