[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netpipe-client"
version = "0.1.0"
description = "Python client for NetPipe - a general-purpose TCP/UDP data transport library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/ipaz12/NetPipe"
Repository = "https://github.com/ipaz12/NetPipe"

[tool.setuptools.packages.find]
include = ["netpipe*"]
